// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test reducer fn \`curriedProduce\` should add new record 1`] = `
{
  "data": {
    "group0": {
      "records": [
        {
          "index": 0,
          "key": "record0",
          "name": "record0",
          "parents": [],
        },
      ],
      "tree": {
        "children": [],
        "group": "group0",
        "index": 0,
      },
    },
    "group1": {
      "records": [
        {
          "index": 1,
          "key": "record1",
          "name": "record1",
          "parents": [],
        },
      ],
      "tree": {
        "children": [],
        "group": "group1",
        "index": 1,
      },
    },
    "group2": {
      "records": [
        {
          "index": 2,
          "key": "record2",
          "name": "record2",
          "parents": [],
        },
        {
          "index": 3,
          "key": "record3",
          "name": "record3",
          "parents": [],
        },
      ],
      "tree": {
        "children": [],
        "group": "group2",
        "index": 2,
      },
    },
    "group3": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group3",
        "index": 3,
      },
    },
    "group4": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group4",
        "index": 4,
      },
    },
  },
  "groups": [
    "group0",
    "group1",
    "group2",
    "group3",
    "group4",
  ],
  "selectedGroup": "group0",
}
`;

exports[`Test reducer fn \`curriedProduce\` should register new group 1`] = `
{
  "data": {
    "group0": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group0",
        "index": 0,
      },
    },
    "group1": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group1",
        "index": 1,
      },
    },
    "group2": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group2",
        "index": 2,
      },
    },
    "group3": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group3",
        "index": 3,
      },
    },
    "group4": {
      "records": [],
      "tree": {
        "children": [],
        "group": "group4",
        "index": 4,
      },
    },
  },
  "groups": [
    "group0",
    "group1",
    "group2",
    "group3",
    "group4",
  ],
  "selectedGroup": "group0",
}
`;
